<resources>
    <string name="app_name">ProjetLedet</string>
    <string name="nb_piece_inex">16</string>
    <string name="puissance">100</string>
    <string name="vie">10</string>
    <string name="lvl_joueur">1</string>
    <string name="Nom_Joueur">Joueur</string>
    <string name="resultat_combat">...</string>
    <string name="puissance_adversaire">Alea 1-150</string>
    <string name="res_partie">Résultat du combat</string>
    <string name="room1">01</string>
    <string name="room2">02</string>
    <string name="room3">03</string>
    <string name="room4">04</string>
    <string name="room5">05</string>
    <string name="room6">06</string>
    <string name="room7">07</string>
    <string name="room8">08</string>
    <string name="room9">09</string>
    <string name="room10">10</string>
    <string name="room11">11</string>
    <string name="room12">12</string>
    <string name="room13">13</string>
    <string name="room14">14</string>
    <string name="room15">15</string>
    <string name="room16">16</string>
    <string name="monstre01">Augure de Bolas</string>
    <string name="monstre02">Ayara, Première de Locthwain</string>
    <string name="monstre03">Boucher de la Horde de l\'effroi</string>
    <string name="monstre04">Brisesort des Gruul</string>
    <string name="monstre05">Chupacabra vorace</string>
    <string name="monstre06">Diable du carnage</string>
    <string name="monstre07">Chevalier de la légion d\'ébène</string>
    <string name="monstre08">Façonneur de peste</string>
    <string name="monstre09">Faucheur de minuit </string>
    <string name="monstre10">Kefnet l\'Éternel-dieu</string>
    <string name="monstre11">Roi troll festoyant</string>
    <string name="monstre12">Ministre d\'obligation</string>
    <string name="monstre13">Niv-Mizzet, Parun</string>
    <string name="monstre14">Pyromancienne de Culmefer</string>
    <string name="monstre15">Bête de Quête</string>
    <string name="monstre16">Syr Konrad, le Sinistre</string>
</resources>
