<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Maître du Donjon"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="2">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/room01"
                android:text="@string/room1"
                android:src="@drawable/icon_inter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:background="@color/transparent"
                android:scaleType="fitCenter"
                android:onClick="onClick">
            </ImageButton>
            <ImageButton
                android:id="@+id/room02"
                android:text="@string/room2"
                android:src="@drawable/icon_inter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:background="@color/transparent"
                android:scaleType="fitCenter"
                android:onClick="onClick">
            </ImageButton>

            <ImageButton
                android:id="@+id/room03"
                android:text="@string/room3"
                android:src="@drawable/icon_inter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:background="@color/transparent"
                android:scaleType="fitCenter"
                android:onClick="onClick">
            </ImageButton>

            <ImageButton
                android:id="@+id/room04"
                android:text="@string/room4"
                android:src="@drawable/icon_inter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:background="@color/transparent"
                android:scaleType="fitCenter"
                android:onClick="onClick">
            </ImageButton>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/room05"
                android:text="@string/room5"
                android:src="@drawable/icon_inter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:background="@color/transparent"
                android:scaleType="fitCenter"
                android:onClick="onClick">
            </ImageButton>
            <ImageButton
                android:id="@+id/room06"
                android:text="@string/room6"
                android:src="@drawable/icon_inter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:background="@color/transparent"
                android:scaleType="fitCenter"
                android:onClick="onClick">
            </ImageButton>

            <ImageButton
                android:id="@+id/room07"
                android:text="@string/room7"
                android:src="@drawable/icon_inter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:background="@color/transparent"
                android:scaleType="fitCenter"
                android:onClick="onClick">
            </ImageButton>

            <ImageButton
                android:id="@+id/room08"
                android:text="@string/room8"
                android:src="@drawable/icon_inter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:background="@color/transparent"
                android:scaleType="fitCenter"
                android:onClick="onClick">
            </ImageButton>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/room09"
                android:text="@string/room9"
                android:src="@drawable/icon_inter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:background="@color/transparent"
                android:scaleType="fitCenter"
                android:onClick="onClick">
            </ImageButton>
            <ImageButton
                android:id="@+id/room10"
                android:text="@string/room10"
                android:src="@drawable/icon_inter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:background="@color/transparent"
                android:scaleType="fitCenter"
                android:onClick="onClick">
            </ImageButton>

            <ImageButton
                android:id="@+id/room11"
                android:text="@string/room11"
                android:src="@drawable/icon_inter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:background="@color/transparent"
                android:scaleType="fitCenter"
                android:onClick="onClick">
            </ImageButton>

            <ImageButton
                android:id="@+id/room12"
                android:text="@string/room12"
                android:src="@drawable/icon_inter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:background="@color/transparent"
                android:scaleType="fitCenter"
                android:onClick="onClick">
            </ImageButton>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/room13"
                android:text="@string/room13"
                android:src="@drawable/icon_inter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:background="@color/transparent"
                android:scaleType="fitCenter"
                android:onClick="onClick">
            </ImageButton>
            <ImageButton
                android:id="@+id/room14"
                android:text="@string/room14"
                android:src="@drawable/icon_inter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:background="@color/transparent"
                android:scaleType="fitCenter"
                android:onClick="onClick">
            </ImageButton>

            <ImageButton
                android:id="@+id/room15"
                android:text="@string/room15"
                android:src="@drawable/icon_inter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:background="@color/transparent"
                android:scaleType="fitCenter"
                android:onClick="onClick">
            </ImageButton>

            <ImageButton
                android:id="@+id/room16"
                android:text="@string/room16"
                android:src="@drawable/icon_inter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:background="@color/transparent"
                android:scaleType="fitCenter"
                android:onClick="onClick">
            </ImageButton>
        </LinearLayout>
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_weight="1"
    android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pièces non explorées :"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:id="@+id/piece_non_explorer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nb_piece_inex"
                android:gravity="right"
                android:layout_marginRight="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Puissance :"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:id="@+id/puissance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/puissance"
                android:gravity="right"
                android:layout_marginRight="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Points de vie :"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:id="@+id/vie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vie"
                android:gravity="right"
                android:layout_marginRight="20dp"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/res_partie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/res_partie"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_weight="1"
        android:gravity="center"/>

    <TextView
        android:id="@+id/resultat_combat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/resultat_combat"
        android:textSize="15dp" />


</LinearLayout>