<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FightActivity"
    android:background="@drawable/back">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Joueur"
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="25dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Puissance"
                    android:gravity="center"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/fpuissance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/puissance"
                    android:gravity="center"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="25dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Points de vie"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/fvie"
                    android:layout_width="46dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/vie"
                    android:textColor="@color/black"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:id="@+id/imgMonster"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_monster"/>

        <TextView
            android:id="@+id/monsterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Adversaire"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Puissance"
            android:gravity="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/puissance_adverse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/puissance_adversaire"
            android:gravity="center"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1">

        <Button
            android:id="@+id/attaqueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:text="Attaque"/>
        <Button
            android:id="@+id/fuiteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="FUITE"/>
    </LinearLayout>





</LinearLayout>